*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.10 ===
* Implemented A, B, C, D and K weightening filters.

=== 1.0.9 ===
* Changed visibility of the dspu::InSampleStream class to public.
* Added dspu::Filter::limit method for limiting frequency parameters of the filter.
* Added dspu::Equalizer::limit_params mehod for limiting frequency parameters of
  the corresponding filter.
* Implemented smooth mode for the FIR/IIR type of equalizer which performs the
  cross-fade on the change of filter characteristics.
* Implemented functions for converting the frequency to a note.
* Added possiblity to load sample built-in into SFZ file format.
* Added test build for Windows using MSYS2.
* Raised the resampling precision for the dspu::Sample::resample().
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.8 ===
* Added MIDI note to frequency convertion function dspu::midi_note_to_frequency.
* Added set of functions to convert Neper to dB and gain values.
* Bugfixes found by Clang compiler.
* Added Clang build for the CI.

=== 1.0.7 ===
* Added dspu::Analyzer::activity() method to check the analyzer's activity.
* Fixed possible memory leakage in dspu::Sample methods.
* Fixed bug in dspu::fade_in and dspu::fade_out methods that didn't copy data
  to destination buffer when the fade length is zero.
* Found and fixed serious performance penalties that could be issued
  by dspu::Limiter on small input buffers.
* Added dspu::InSampleStream class for working with audio sample in streaming manner.
* Added dspu::Sample::load_ext and dspu::Sample::loads_ext methods for loading sample
  as a part of LSPC file when possible.
* Added SCS_AMIN and SCS_AMAX functions for the sidechain input mode.
* Updated build scripts.
* Implemented garbage collection mechanism for the dspu::SamplePlayer.

=== 1.0.6 ===
* Fixed clang errors.
