@@ -537,21 +537,21 @@ namespace lsp
             lsp::swap(nChannels, dst->nChannels);
         }
 
-        ssize_t Sample::save_range(const char *path, size_t offset, ssize_t count)
+        ssize_t Sample::save_range(const char *path, size_t offset, ssize_t count) const
         {
             io::Path p;
             status_t res = p.set(path);
             return (res == STATUS_OK) ? save_range(&p, offset, count) : res;
         }
 
-        ssize_t Sample::save_range(const LSPString *path, size_t offset, ssize_t count)
+        ssize_t Sample::save_range(const LSPString *path, size_t offset, ssize_t count) const
         {
             io::Path p;
             status_t res = p.set(path);
             return (res == STATUS_OK) ? save_range(&p, offset, count) : res;
         }
 
-        ssize_t Sample::save_range(const io::Path *path, size_t offset, ssize_t count)
+        ssize_t Sample::save_range(const io::Path *path, size_t offset, ssize_t count) const
         {
             if ((nSampleRate <= 0) || (nChannels < 0))
                 return -STATUS_BAD_STATE;
@@ -585,7 +585,7 @@ namespace lsp
             return (res == STATUS_OK) ? written : -res;
         }
 
-        ssize_t Sample::save_range(mm::IOutAudioStream *out, size_t offset, ssize_t count)
+        ssize_t Sample::save_range(mm::IOutAudioStream *out, size_t offset, ssize_t count) const
         {
             if ((nSampleRate <= 0) || (nChannels < 0))
                 return -STATUS_BAD_STATE;
